package com.affinitynow.app.user.service.matcher;

public interface SeekedTopicMatcher extends Matcher {
}
