@startuml diagram
!include ../style/commons.style

package com.affinitynow.app {
    package model {
        class User {
            - id: long
            - pseudo: string
            - likedKnowledges: Map<String, Knowledge>
            - seekedKnowledges: Map<String, Knowledge>
            - friends: Set<User>
            - email: string
            - follows: Set<User>
            - friends: Set<User>
            + User(name: string)
            + getPseudo(): string
            + setPseudo(): void
            + getTopic(): string
            + setTopic(): void
            + getLikedKnowledge(): Map<String, Knowledge>
            + setLikedKnowledges(knowledges: Map<String, Knowledge>): void
            + getSeekedKnowledges(): Map<String, Knowledge>
            + setSeekedKnowledges(knowledges: Map<String, Knowledge>): void
            + setFollows(Set<User>) : void
            + getFollows() : void
            + setFriend(Set<User>) : void
            + getFriend() : void
            + equals(user: User): boolean
            + hashcode(): integer
            + toString(): string
        }

        class Topic {
            - id: long
            - Name: string
            + this(Name: string)
            + getName(): string
            + setName(): void
        }

        class Knowledge {
            - topic: Topic
            - level: Level
            + topic(): Topic
            + Level(topic: Topic): Level
        }

        enum Level {
            ONE, TWO, THREE, FOUR, FIVE
        }

        class Mail {
            - nom: string
            - from: string
            - to: string
            - body: string
            + Mail(from: string, to: string, body: string, subject: string)
        }
    }

    package user {
        package controler {
            class UserControler {
                - userService: UserService
                - userRepository: UserRepository
                + getAllUsers(): List<UserDto>, GET "/user"
                + createNewUserWithKnowledge(dto: UserDto): UserDto, POST "/user/knowledges"
                + getUserMatchingListById(username: string, strategyName:string, excludedTopics: Set<string>) , GET /user/{username}/match/{strategyName}
                + getUserByUsername(username: string): UserDto, GET "/{username}"
                + getFriendListFromUser(username: string): Set<UserDto>, "/{username}/friend"
                + addFriendToUserFriendList(username: string): UserDto, PUT "/{username}/friend"
                + removeFriendFromUserFriendList(username: user, friend, string), DELETE "/{username}/friend/{friend}"
                + getFollowsOfUser(string: username): Set<UserDto>, GET "/{username}/follow"
                + addFollowToUserFollowList(UserDto dto, String username): UserDto, POST "/{username}/follow"
                + removeFollowFromUserFollowList(String username, UserDto dto): UserDto, DELETE "/{username}/unfollow"
            }
        }

        package service {
            class UserService {
                - matcherMap: Map<String, Matcher>
                + listOfTopicsByType(user: User): Stream<Knowledge>
                + isLikedTopic(topic: Topic, user:User): boolean 
                + isSeekedTopic(topic: Topic, user:User): boolean 
                + levelOfLikedTopic(topic: Topic, user: User): Optional<Level>
                + matching(strategyName: string, user: User, matchingUser: User, excludedTopicList: Optional<Set<string>>): Optional<IMatchResult<T>>
                + addToFriendList(user: User, friend: User): void
                + removeFromFriendList(user, friend): void
                + getFriendList(user: User): Set<User>
                + getAllUsers(): List<User>
                + followUser(user: User, userToFollow: User) :void
                + unFollowUser(user: User, : user): void
                + getFollows(user: User): Set<User>
            }

            package matcher {
                interface Matcher {
                    + match(user1: User, user2: User): Optional<IMatchResult>
                    + calculateQuality(user: User, user: matchingUser, intersection: Set<Knowledge>)
                    + boolean isExcluded()
                    + getFilteredTopic(): Set<String>
                    + setFilteredTopic(Set<String> topics): void
                }

                interface ScoreMatcher extends Matcher{}

                interface SeekedTopicMatcher extends Matcher{}

                class DoubleSeekedTopicMatcher implements SeekedTopicMatcher {
                    + match(user1: User, user2: User): IMatchResult
                    + calculateQuality(user: User, user: matchingUser, intersection: Set<Knowledge>)
                }
                
                class BooleanScoreMatcher implements ScoreMatcher {
                    + match(user1: User, user2: User): IMatchResult
                    + calculateQuality(user: User, user: matchingUser, intersection: Set<Knowledge>)
                    + getFilteredTopic(): Set<String>
                    + setFilteredTopic(Set<String> topics): void
                }

                class DoubleScoreMatcher implements ScoreMatcher {
                    + match(user1: User, user2: User): IMatchResult
                    + calculateQuality(user: User, user: matchingUser, intersection: Set<Knowledge>)
                    + getFilteredTopic(): Set<String>
                    + setFilteredTopic(Set<String> topics): void
                }

                interface IMatchResult<T> extends java.lang.Comparable{
                    + result(): T
                    + user(): User
                    + mUser(): User
                    + qualite(): double
                    + commonTopicsBetweenUsers(): set<Knowledge>
                }

                abstract class AbstractMatchResult<T> implements IMatchResult {
                    - user: User
                    - mUser: User
                    - commonTopics: set<Knowledge>
                    - quality: double
                    ~ this(commonTopics: set<Knowledge>, user: User, mUser: User)
                    + user(): User
                    + mUser(): User
                    + commonTopicsBetweenUsers(): set<Knowledge>
                    + setQuality(quality: double)
                    + qualite(): double
                }

                class BooleanMatchResult<Boolean> extends AbstractMatchResult{
                    - resultat: boolean
                    ~ this(commonTopics: set<Knowledge>, user: User, mUser: User, resultat: boolean)
                    + resultat(): boolean
                    + compareTo(o: IMatchResult<T>): integer
                }

                class DoubleMatchResult<Double> extends AbstractMatchResult{
                    - resultat: double
                    ~ this(commonTopics: set<Knowledge>, user: User, mUser: User, resultat: double)
                    + resultat(): double
                    + compareTo(o: IMatchResult<T>): integer
                }
            }
        }

        package dto {
            class UserDto {
                - id: long
                - pseudo: string
                - likedKnowledgesnowledges: Map<string, Knowledge>
                - seekedKnowledgesnowledges: Map<string, Knowledge>
                - friends: Set<User>
                - follows: Set<User
                - email: string
                + getId(): long
                + setId(id: Long): UserDto
                + getPseudo(): string
                + getFollows(): Set<User>
                + getFriend(): Set<User>
                + setPseudo(pseudo: string): UserDto
                + setLikedKnowledgesKnowledges(knowledge: Map<string, Knowledge>): UserDto
                + setSeekedKnowledgesKnowledges(knowledge: Map<string, Knowledge>): UserDto
                + "static" UserDto fromEntity(user: User): UserDto
            }
        }

        package repository {
            class UserRepository {}
        }
    }

    namespace topic {
        namespace controler {
            class TopicControler {
                - topicRepository: TopicRepository
                + getTopics(): List<TopicDto>, GET/topic
            }
        }

        namespace service {
        }

        namespace dto {
            class TopicDto {
                - id: long
                - name: string
                + getId(): long
                + setId(id: Long): TopicDto
                + getName(): string
                + setName(pseudo: string): TopicDto
            }
        }

        namespace repository {
            class TopicRepository {}
        }
    }

    namespace mail {
        namespace controller {
            class EmailController {
                - emailService: EmailService
                + EmailController(emailService: EmailService)
                + sendFeedback(feedback: Mail): void, POST "/mail"
            }
        }

        namespace service {
            class EmailService {
                - mailManager: MailManager
                + EmailService(mailManager: MailManager)
                + getMailManager(): MailManager
                + createMail(from: String, to: String, body: String, subject: String): SimpleMailMessage
                + sendMail(feedback: Mail): void
                + createMailSender(): JavaMailSenderImpl
            }

            namespace mailmanager {
                class MailManager {
                    - host: string
                    - port: integer
                    - username: string
                    - password: string
                    + createMailSender(): JavaMailSenderImpl
                    + createMailMessage(mail: Mail): SimpleMailMessage
                    + getHost(): string
                    + getPort(): integer
                    + getUsername: string
                    + getPassword: string
                }
            }
        }
    }
}

UserService *--> "*" Matcher
UserControler --> UserService: "uses"
UserControler --> UserDto: "uses"
UserService --> UserRepository: "uses"
UserRepository --> User: "uses"
Knowledge *--> "1" Topic
Knowledge *--> "1" Level
User *--> "*" Knowledge: "liked knowledge"
User *--> "*" Knowledge: "seeked knowledge"
Matcher --> IMatchResult: "uses"
mail.controller.EmailController --> mail.service.EmailService: "uses""
mail.service.EmailService --> mail.service.mailmanager.MailManager: "uses""
mail.service.EmailService --> Mail: "uses""
@enduml